# state-manager

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: ci.yml  client_publish.yml  client_version.yml  deploy-amur.yml  docker.yml
client-ts/: .gitignore  buf.gen.yaml  package.json  tsconfig.json
client-ts/src/: client.test.ts  client.ts  dev.ts  index.ts
deployment/: Dockerfile  Pulumi.amur-dev.yaml  Pulumi.amur.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
proto/: buf.md  buf.yaml
proto/state_manager/: state_manager.proto
src/: grpc.rs  interface.rs  main.rs  proto.rs  types.rs
src/file_storage/: interface.rs  mod.rs  s3.rs
src/impls/: in_memory.rs
src/service/: in_memory.rs  interface.rs  mod.rs  persistent.rs  tests.rs
src/storage/: filesystem.rs  interface.rs  mod.rs  rocksdb.rs  tests.rs
src/utils/: exponential_sequence.rs  mod.rs
