[package]
name = "state-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
log = "0.4"
fern = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
tonic = "0.7.2"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dashmap = "5.3.3"
rocksdb = "0.18"
clap = { version = "3.1.18", features = ["derive", "env"] }

[build-dependencies]
tonic-build = "0.7.2"
